# yinshi

./: .env.example  .gitignore  CLAUDE.md  PYTHON.md  README.md
.github/: dependabot.yml
backend/: pyproject.toml
backend/requirements/: base.txt  dev.txt
backend/scripts/: backup.sh  migrate_to_multitenant.py
backend/src/yinshi/: __init__.py  auth.py  config.py  db.py  exceptions.py  main.py  model_catalog.py  models.py  rate_limit.py  runner_agent.py  tenant.py
backend/src/yinshi/api/: auth_routes.py  catalog.py  datadog_proxy.py  deps.py  github.py  repos.py  runners.py  sessions.py  settings.py  stream.py  terminals.py  workspace_files.py  workspaces.py  ws.py
backend/src/yinshi/services/: accounts.py  container.py  control_encryption.py  crypto.py  git.py  git_runtime.py  github_app.py  keys.py  pi_config.py  pi_releases.py  provider_connections.py  run_coordinator.py  runners.py  sidecar.py  sidecar_runtime.py  user_settings.py  workspace.py  workspace_files.py  (+1 more)
backend/tests/: conftest.py  factories.py  test_accounts.py  test_api.py  test_auth.py  test_byok_enforcement.py  test_catalog_api.py  test_config.py  test_container.py  test_crypto.py  test_datadog_proxy.py  test_db.py  test_deps.py  test_exceptions.py  test_git.py  test_github_app.py  test_journeys.py  test_main.py  test_models.py  test_pi_config.py  test_pi_package_update_assets.py  test_pi_releases.py  test_properties.py  test_provider_auth_routes.py  test_runners.py  test_security_fixes.py  test_settings_api.py  test_sidecar.py  test_sidecar_runtime.py  test_tenant.py  test_workspace_files.py
(+189 files in other folders)
